fixed NavBar stretching issue

--- a/css/index.css
+++ b/css/index.css
@@ -159,7 +159,16 @@ header {
 @media (max-width: 500px) {
   header {
     flex-direction: column;
+  }
+}
+@media (max-width: 500px) and (max-height: 700px) {
+  header {
     height: 38vh;
+  }
+}
+@media (max-width: 500px) and (max-height: 950px) {
+  header {
+    height: 25vh;
   }
 }
 header nav {
